Use http not https
Signed-off-by: Dimitris Karakasilis <dimitris@karakasilis.me>

--- a/kairos-resources/Dockerfile
+++ b/kairos-resources/Dockerfile
@@ -102,8 +102,8 @@ COPY <<'EOF' /usr/bin/start_cage.sh
 
 # Get the IPv4 address of wlan0
 export KAIROS_IP=$(ip -4 addr show wlan0 | grep -oP '(?<=inet\s)\d+(\.\d+){3}')
-#/usr/bin/cage chrome https://${KAIROS_IP}:30000 -- --kiosk --enable-features=UseOzonePlatform --ozone-platform=wayland
-/usr/bin/cage firefox https://${KAIROS_IP}:30000 -- --kiosk
+#/usr/bin/cage chromium-browser http://${KAIROS_IP}:30000 -- --kiosk --enable-features=UseOzonePlatform --ozone-platform=wayland
+/usr/bin/cage firefox http://${KAIROS_IP}:30000 -- --kiosk
 EOF
 RUN chmod 755 /usr/bin/start_cage.sh
 
