--- a/kairos-resources/Dockerfile
+++ b/kairos-resources/Dockerfile
@@ -15,6 +15,7 @@ RUN zypper --non-interactive in -y fetchmsttfonts || : # This could fail
 COPY <<'EOF' /etc/wpa_supplicant/wpa_supplicant.conf
 # This file should be generated using wpa_passphrase
 # passphrase here is 12345678
+# NOTE: Change this to user your own passphrase for the wifi hotspot
 ctrl_interface=/var/run/wpa_supplicant
 ctrl_interface_group=admin
 network={
